--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <img class="logo" src="logo.avif" alt="Logo">
     </nav>
     <div class="container">
-        <div class="message right">Sample message right</div>
-        <div class="message left">Sample message left</div>
+<!--         <div class="message right">Sample message right</div>
+        <div class="message left">Sample message left</div> -->
     </div>
 
     <div class="send">
